# webEmbedding

./: .gitignore  .npmignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: benchmark-regression.yml  publish.yml  release.yml
bundle/source-first-clone/: .mcp.json
bundle/source-first-clone/.codex-plugin/: plugin.json
bundle/source-first-clone/mcp/: server.py
bundle/source-first-clone/mcp/source_first_clone/: __init__.py  acquisition.py  capture_bundle.py  constants.py  orchestration.py  planning.py  platform_adapters.py  policy.py  protocol.py  rebuild_scaffold.py  repair_scaffold.py  reproduction.py  self_verify.py  site_profile.py  tools.py  verification.py  verification_support.py
bundle/source-first-clone/skills/exact-clone-intake/: SKILL.md
bundle/source-first-clone/skills/exact-clone-intake/agents/: openai.yaml
docs/: universal-benchmark-corpus.txt  universal-benchmark-expectations.json  webEmbedding-universal-completion-score.md  webEmbedding-v0.2-architecture.md  webEmbedding-v0.3-playwright-integration.md  webEmbedding-v1-universal-mode.md
python/web_embedding/: installer.py
scripts/: benchmark_routes.py  bootstrap.sh  build_sample_demo.py  build_workflow_demo.py  check_benchmark_report.py  demo_artifacts.py  record_sample_demo.mjs  record_workflow_demo.mjs  release_bundle.py
