[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "web-embedding"
version = "0.1.1"
description = "Source-first Codex plugin installer for exact web embedding workflows."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Jongho" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
web-embedding = "web_embedding.installer:main"

[tool.setuptools]
package-dir = { "" = "python" }

[tool.setuptools.packages.find]
where = ["python"]
